sass classes created, flex div correctly spacing educator cards on page

--- a/src/sass/components/_card.scss
+++ b/src/sass/components/_card.scss
@@ -96,21 +96,6 @@
         flex-direction: column;
     }
     
-    // &__Ear{
-        
-    //         position: relative;
-            
-    //         &:before {
-    //           content: '';
-    //           display: inline-block;
-    //           clip-path: polygon(0 0, 0 30px, 30px 0);
-    //           background-color:$color-neutral-blue ;
-    //           height: 100%;
-    //           width: 100%;
-    //           position: absolute;
-    //         }
-          
-    // }
     &__Ear{
         
         position: relative;
@@ -192,6 +177,75 @@
 
         &:hover {
             cursor: pointer;
+        }
+    }
+}
+
+.horizontal-card {
+    &__structure {
+        display: inline-block;
+        position: relative;
+        width: 32rem;
+        height:20rem;
+        border:.2rem solid $color-neutral-blue;
+        margin:1rem;
+        border-radius: .4rem;
+        box-shadow: 0 .3rem .8rem -.3rem #313131;
+        overflow:hidden;
+        &:hover {
+            box-shadow: 0rem .3rem .8rem -.1rem #313131;
+        }
+    }
+
+    &__imageContainer{
+        width:20rem;
+        height:100%;
+        display:flex;
+        justify-content:center;
+        align-items:center;
+        overflow:hidden;
+
+        &__image {
+            flex-shrink:0;
+            -webkit-flex-shrink: 0;
+            // max-width:100%;
+            max-height:100%;
+            
+        } 
+    }
+
+    &__details {
+        padding-left:1rem;
+        padding-right:1rem;
+
+        &__title {
+            font-weight: bold;
+            font-size: 2rem;
+            margin-bottom:3%;
+            color:rgb(37, 37, 37);
+        }
+
+        &__description {
+            font-size:1rem;
+            color:rgb(155, 155, 155);
+        }
+
+        &__specialties {
+            color:rgb(155, 155, 155);
+            margin-top:.8rem;
+            height:3rem;
+            list-style: none;
+            flex-wrap: wrap;
+            padding: 0;
+            display: flex;
+            flex-direction: column;
+        }
+
+        &__contact {
+            color:rgb(155, 155, 155);
+            position: absolute;
+            bottom:1.2rem;
+            left:1.2rem;
         }
     }
 }
