--- a/src/sass/layout/_flexbox.scss
+++ b/src/sass/layout/_flexbox.scss
@@ -14,6 +14,13 @@
     }
 }
 
+.flex-row-space-evenly {
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
 .flex-column {
     display: flex;
     flex-direction: column;
